chrome/browser/ui/cocoa/toolbar/toolbar_controller.h
@@ -21,7 +21,6 @@
 @class BackForwardMenuController;
 class Browser;
 @class BrowserActionsContainerView;
-class BrowserActionsContainerViewSizeDelegate;
 @class BrowserActionsController;
 class CommandUpdater;
 class LocationBarViewMac;
@@ -71,8 +70,6 @@ class NotificationBridge;
   base::scoped_nsobject<BackForwardMenuController> backMenuController_;
   base::scoped_nsobject<BackForwardMenuController> forwardMenuController_;
   base::scoped_nsobject<BrowserActionsController> browserActionsController_;
-  std::unique_ptr<BrowserActionsContainerViewSizeDelegate>
-      browserActionsContainerDelegate_;
 
   // Lazily-instantiated menu controller.
   base::scoped_nsobject<AppMenuController> appMenuController_;
